force-app/main/default/objects/KimbleOne__AnalysisFactMember__c/KimbleOne__AnalysisFactMember__c.object-meta.xml
<CustomObject>
    <label>Analysis Fact Member</label>
    <nameField>
        <label>Analysis Fact Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analysis Fact Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>