force-app/main/default/objects/KimbleOne__AnalysisFactMember__c/fields/KimbleOne__AnalysisFact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AnalysisFact__c</fullName>
    <label>Analysis Fact</label>
    <referenceTo>KimbleOne__AnalysisFact__c</referenceTo>
    <relationshipLabel>Analysis Fact Members</relationshipLabel>
    <relationshipName>AnalysisFactMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>