force-app/main/default/objects/KimbleOne__AnalysisFactMember__c/fields/KimbleOne__AnalysisFactMember__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AnalysisFactMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analysis Fact Member</label>
    <referenceTo>KimbleOne__AnalysisFactMember__c</referenceTo>
    <relationshipLabel>Analysis Fact Members</relationshipLabel>
    <relationshipName>AnalysisFactMembers</relationshipName>
    <type>Lookup</type>
</CustomField>