force-app/main/default/objects/KimbleOne__AnalysisFactMember__c/fields/KimbleOne__DisplaySequence__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DisplaySequence__c</fullName>
    <label>Display Sequence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>